<resources>
    <string name="app_name">RaptorDriver</string>

    <string name="tab_item_current">Current</string>
    <string name="tab_item_me">Me</string>

    <string name="map_mode">map</string>
    <string name="order_mode">start</string>
    <string name="shutdown_mode">stop</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="online_hours">online:</string>
    <string name="hours">hours</string>
    <string name="order_count">orders:</string>
    <string name="sum">sum:%1$s</string>
    <string name="bargain_rate">bargain rate:%1$d%%</string>

    <string name="reservation_route">reservation route</string>
    <string name="current_route">current route</string>
    <string name="current_route_listening">listening</string>
    <string name="current_route_ongoing">ongoing</string>
    <string name="current_route_finished">finished，waiting rate</string>
    <string name="current_route_paused">pausing</string>
    <string name="today_history_route">today history route</string>
    <string name="map_mode_locate">locate mode</string>
    <string name="map_mode_view">view mode</string>

    <string name="performance_review">performance review</string>

    <string name="bargain_rate_label">bargain rate</string>
    <string name="rating_label">rating</string>

    <string name="personal_information">personal information</string>
    <string name="my_route_label">my route</string>
    <string name="wallet">wallet</string>
    <string name="message_center">message_center</string>
    <string name="my_car">my car</string>
    <string name="settings">settings</string>
    <string name="driver">driver</string>

    <string name="change_password">change password</string>
    <string name="illegal_mobile">illegal mobile</string>
    <string name="illegal_password">illegal password</string>
    <string name="passwords_are_not_equal">passwords are not equal</string>

    <string name="apply_for_driver">apply for driver</string>
    <string name="application_is_under_verifying">application is under verifying</string>
</resources>
