<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/base_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">

        <LinearLayout
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/online_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/online_hours"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_primary" />

            <TextView
                android:id="@+id/order_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/order_count"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_row"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sum"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_secondary" />

            <TextView
                android:id="@+id/bargain_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/bargain_rate"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_secondary" />
        </LinearLayout>
    </RelativeLayout>

    <include
        android:id="@+id/divider1"
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/base_info" />

    <RelativeLayout
        android:id="@+id/current_route_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1"
        android:padding="@dimen/padding_normal">

        <TextView
            android:id="@+id/current_route_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/current_route"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary" />
    </RelativeLayout>

    <include
        android:id="@+id/divider2"
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_route_info" />

    <RelativeLayout
        android:id="@+id/today_history_route_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:padding="@dimen/padding_normal">

        <TextView
            android:id="@+id/today_history_route_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/today_history_route"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary" />
    </RelativeLayout>

</RelativeLayout>
