<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/map_mode"
            android:layout_width="@dimen/footer_item_diameter_small"
            android:layout_height="@dimen/footer_item_diameter_small"
            android:layout_margin="@dimen/activity_margin"
            android:background="@drawable/footer_button_background_primary"
            android:text="@string/map_mode"
            android:textColor="@color/md_blue_grey_500"
            android:textSize="@dimen/footer_item_text_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/order_mode"
            android:layout_width="@dimen/footer_item_diameter_large"
            android:layout_height="@dimen/footer_item_diameter_large"
            android:layout_margin="@dimen/activity_margin"
            android:background="@drawable/footer_button_background_accent"
            android:text="@string/order_mode"
            android:textColor="@color/md_blue_grey_50"
            android:textSize="@dimen/footer_item_text_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/shutdown_mode"
            android:layout_width="@dimen/footer_item_diameter_small"
            android:layout_height="@dimen/footer_item_diameter_small"
            android:layout_margin="@dimen/activity_margin"
            android:background="@drawable/footer_button_background_primary"
            android:text="@string/shutdown_mode"
            android:textColor="@color/md_blue_grey_500"
            android:textSize="@dimen/footer_item_text_small" />
    </LinearLayout>
</LinearLayout>