<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/personal_info_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/float_layer"
            android:padding="@dimen/padding_normal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/margin_normal"
                android:scaleType="center"
                android:src="@drawable/account_circle_grey" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:layout_toRightOf="@id/avatar"
                android:gravity="center"
                android:text="Manson"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_primary" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/performance_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:background="@drawable/rim_button_background"
                android:gravity="center"
                android:text="@string/performance_review"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_secondary" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/personal_info_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personal_info_1"
            android:background="@color/float_layer"
            android:orientation="horizontal"
            android:padding="@dimen/padding_normal">

            <LinearLayout
                android:id="@+id/rate_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="5.00"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_primary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="@string/rating_label"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_secondary" />

            </LinearLayout>

            <include layout="@layout/divider_vertical" />

            <LinearLayout
                android:id="@+id/route_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="5.00 km"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_primary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="@string/my_route_label"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_secondary" />
            </LinearLayout>

            <include layout="@layout/divider_vertical" />

            <LinearLayout
                android:id="@+id/bargain_rate_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bargain_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="100%"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/text_primary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="@string/bargain_rate_label"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_secondary" />

            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/divider"
            layout="@layout/divider_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/personal_info_2" />

        <RelativeLayout
            android:id="@+id/wallet_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:background="@color/float_layer"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_normal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/wallet_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/wallet_icon" />

            <TextView
                android:id="@+id/wallet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:layout_toEndOf="@id/wallet_icon"
                android:gravity="center"
                android:text="@string/wallet"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_primary" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:scaleType="center"
                android:src="@drawable/enter_arrow" />

            <include
                layout="@layout/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wallet_container"
            android:background="@color/float_layer"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_normal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/message_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/message_icon" />

            <TextView
                android:id="@+id/message_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:layout_toEndOf="@id/message_icon"
                android:gravity="center"
                android:text="@string/message_center"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_primary" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:scaleType="center"
                android:src="@drawable/enter_arrow" />

            <include
                layout="@layout/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_car_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message_container"
            android:background="@color/float_layer"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_normal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/my_car_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/my_car_icon" />

            <TextView
                android:id="@+id/my_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:layout_toEndOf="@id/my_car_icon"
                android:gravity="center"
                android:text="@string/my_car"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_primary" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:scaleType="center"
                android:src="@drawable/enter_arrow" />

        </RelativeLayout>

        <include
            android:id="@+id/divider2"
            layout="@layout/divider_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_car_container" />

        <RelativeLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider2"
            android:background="@color/float_layer"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_normal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/settings_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/settings_icon" />

            <TextView
                android:id="@+id/settings_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:layout_toEndOf="@id/settings_icon"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_primary" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_normal"
                android:scaleType="center"
                android:src="@drawable/enter_arrow" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>